# outlook-ea

./: .gitignore  AGENTS.md  Cargo.toml  EVAL_REPORT.md  PROGRESS.md  QUICKSTART.md  README.md  SKILL.md
.planning/: reqs-001.md  roadmap-001.md
.planning/archive/: decisions-001.md
skill/: SKILL.md  mea-onboard.md
specs/: auto-triage.md  body-reading.md  cli-interface.md  data-access.md  mail-actions.md  overlay-db.md  rules-engine.md  search.md  skill-wrapper.md  triage-labels.md
src/: actions.rs  body.rs  cli.rs  data.rs  db.rs  graph.rs  labels.rs  lib.rs  rules.rs  search.rs  triage.rs
tests/: integration.rs
v2/: format-stream.sh
