[package]
name = "mea"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mea"
path = "src/bin/mea.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
html2text = "0.14"
mailparse = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
